--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-bitrefill",
+  "name": "@bitrefill/eslint-config-bitrefill",
   "version": "1.1.1",
   "description": "Eslint config with react support",
   "main": "index.js",
