--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^5.12.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-cypress": "^2.2.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -38,7 +39,5 @@
     "eslint-plugin-standard": "^3.0.1",
     "prettier": "^1.7.4"
   },
-  "devDependencies": {
-    "eslint-plugin-cypress": "^2.0.1"
-  }
+  "devDependencies": {}
 }
