--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "eslint",
     "eslintconfig"
   ],
-  "peerDependencies": {
+  "dependencies": {
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1"
+  },
+  "peerDependencies": {
     "eslint": "^8.47.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-jest": "^27.2.3",
@@ -26,7 +28,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-security": "^1.7.1"
+  },
+  "optionalDependencies": {
     "jest": "^29.6.4"
   }
 }
