--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   ],
   "dependencies": {
     "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.6.0"
+    "eslint-import-resolver-typescript": "^3.6.1"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.47.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-n": "^16.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-security": "^1.7.1"
+    "eslint-plugin-security": "^1.7.1",
+    "typescript": "^5.2.2"
   },
   "optionalDependencies": {
-    "jest": "^29.6.4"
+    "jest": "^29.7.0"
   }
 }
